--- a/public/assets/css-rtl/style.css
+++ b/public/assets/css-rtl/style.css
@@ -82,6 +82,7 @@ License        :   Licensed under ThemeForest License
 */
 /* ######## FONT ######## */
 /* ############### FONTS IMPORT ############### */
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
 /* ######## BOOTSTRAP ######## */
 /*Color variables*/
@@ -90,6 +91,7 @@ License        :   Licensed under ThemeForest License
 /*black variables*/
 /*shadow variables*/
 html {
+    
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -100,7 +102,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family:Cairo, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
@@ -1848,7 +1850,7 @@ pre {
   .alert-dismissible .close {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     padding: 0.75rem 1.25rem;
     color: inherit; }
 
