--- a/public/assets/scss/custom/_custom-styles.scss
+++ b/public/assets/scss/custom/_custom-styles.scss
@@ -376,7 +376,7 @@ a.close.disabled {
 /* ###### 6.3 Global  ###### */
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Cairo", sans-serif;
 }
 
 .main-body, .main-dashboard {
